--- a/index.html
+++ b/index.html
@@ -20,18 +20,22 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-       
+
         <section class="wrapper">
             <div class="div-1">
-                Div 1
+                <p><span>I'm born and raised in NJ, USA.</span>
+                    I love to travel, mostly in the US. There are so many natural wonders to explore.</p>
             </div>
             <div class="div-2">
-                Div 2
+                <p><span>My interests:</span>
+                Tech - no Windows, Apple only please!,
+                Cooking - we all have to eat, why not make it yourself?,
+                Hockey - read on for more on that...</p>
             </div>
             <div class="div-3">
-                Div 3
+                <p><span>Highlight of my past career:</span> touching the Stanley Cup. Not once, but twice!</p>
             </div>
-        </section>    
+        </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
